--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -69,5 +69,5 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 70
           min-coverage-changed-files: 70
-          title: "Code Coverage"
+          title: Code Coverage ${{ inputs.gradle-module }}
           update-comment: true
