--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -21,6 +21,12 @@ on:
       SLACK_APP_TOKEN:
         required: false
         description: "Slack app token (Optional, won't publish to slack if not present)"
+      GITHUB_TOKEN:
+        required: false
+        description: "Github token (Required for publishing test results for sonar cloud)"
+      SONAR_TOKEN:
+        required: false
+        description: "Sonar token (Optional, won't publish to sonar if not present)"
 jobs:
   pr_title_checker:
     name: PR title checker
@@ -49,9 +55,10 @@ jobs:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
           GRADLE_MODULE: ${{ inputs.gradle-module }}
-          SONAR_CLOUD_ENABLED: ${{ inputs.sonar-cloud }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          if [ ! -z "$SONAR_CLOUD_ENABLED" ]; then
+          if [ ! -z "$SONAR_TOKEN" ]; then
             EXTRA_ARGS='sonar --info'
           else
             EXTRA_ARGS=''
