test with true default

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,7 +50,7 @@ on:
       arm-build:
         required: false
         type: boolean
-        default: false
+        default: true
         description: 'Build both an arm64 image in addition to the x64 image'
     secrets:
       GHL_USERNAME:
@@ -119,7 +119,6 @@ jobs:
       slack-message-id: ${{ needs.init_message.outputs.slack-message-id }}
     steps:
       - name: Download curl
-        if: runner.arch == 'X64'
         id: download-curl
         shell: bash
         run: |
