--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,7 +50,7 @@ on:
       arm-build:
         required: false
         type: boolean
-        default: true
+        default: false
         description: 'Build both an arm64 image in addition to the x64 image'
     secrets:
       GHL_USERNAME:
