--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,10 +32,17 @@ on:
         type: string
         description: Name of the docker file to be built
         default: "Dockerfile"
+      java-distribution:
+        required: false
+        type: string
+        default: "corretto"
       java-version:
         required: false
         type: string
-        description: the version of the java docker image to build
+        default: "17"
+      java-docker-version:
+        required: false
+        type: string
         default: "17.0.8"
       slack-channel-id:
         required: false
@@ -129,8 +136,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: '17'
+          distribution: ${{ inputs.distribution }}
+          java-version: ${{ inputs.java-version }}
           cache: 'gradle'
       - name: Test project
         env:
@@ -205,8 +212,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: '17'
+          distribution: ${{ inputs.distribution }}
+          java-version: ${{ inputs.java-version }}
           cache: 'gradle'
       - name: Install LinkerD CLI
         shell: bash
@@ -329,8 +336,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: '17'
+          distribution: ${{ inputs.distribution }}
+          java-version: ${{ inputs.java-version }}
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: Check for secret.AWS_ACCOUNT_ID availability
@@ -379,7 +386,7 @@ jobs:
           push: true
           no-cache: true
           build-args: |
-            JAVA_VERSION=${{ inputs.java-version }}
+            JAVA_VERSION=${{ inputs.java-docker-version }}
             GHL_USERNAME=${{ secrets.GHL_USERNAME }}
             GHL_PASSWORD=${{ secrets.GHL_PASSWORD }}
           # For pruning built image on self-hosted runner based on this run's ID
