--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -2,6 +2,14 @@ name: Build and test
 on:
   workflow_call:
     inputs:
+      java-distribution:
+        required: false
+        type: string
+        default: 'corretto'
+      java-version:
+        required: false
+        type: string
+        default: '17'
       gradle-module:
         required: false
         type: string
@@ -36,8 +44,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: '17'
+          distribution: ${{ inputs.distribution }}
+          java-version: ${{ inputs.java-version }}
           cache: 'gradle'
       - name: Test project
         env:
