--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -141,36 +141,36 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y curl
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: ${{ inputs.java-distribution }}
-          java-version: ${{ inputs.java-version }}
-          cache: 'gradle'
-      - name: Test project
-        env:
-          GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
-          GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
-          GRADLE_MODULE: ${{ inputs.gradle-module }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if [ -z "$GRADLE_MODULE" ]; then
-            ./gradlew --no-daemon test
-          else
-            ./gradlew --no-daemon $GRADLE_MODULE:test
-          fi
-        shell: bash
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-result
-          path: |
-            build/reports/tests/test
-            /home/runner/.gradle/daemon/**/daemon-*.out.log
-          retention-days: 2
+      # - name: Checkout
+      #   uses: actions/checkout@v3
+      # - name: Set up JDK
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     distribution: ${{ inputs.java-distribution }}
+      #     java-version: ${{ inputs.java-version }}
+      #     cache: 'gradle'
+      # - name: Test project
+      #   env:
+      #     GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
+      #     GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
+      #     GRADLE_MODULE: ${{ inputs.gradle-module }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     if [ -z "$GRADLE_MODULE" ]; then
+      #       ./gradlew --no-daemon test
+      #     else
+      #       ./gradlew --no-daemon $GRADLE_MODULE:test
+      #     fi
+      #   shell: bash
+      # - name: Upload test results
+      #   if: always()
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: test-result
+      #     path: |
+      #       build/reports/tests/test
+      #       /home/runner/.gradle/daemon/**/daemon-*.out.log
+      #     retention-days: 2
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
         if: always()
