change to normal defaults, ready for merge to v2

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -62,11 +62,10 @@ on:
       push-to-manifests:
         required: false
         type: boolean
-        default: false
+        default: true
         description: 'If false, will use ArgoCD Updater instead of pushing to kube-manifests'
       argocd-server:
         required: false
-        default: 'argocd.staging.monta.app'
         type: string
         description: 'ArgoCD hostname'
     secrets:
