--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -108,6 +108,8 @@ jobs:
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
       runners: ${{ toJSON(steps.*.outputs.runner) }}
+      service-namespace: ${{ steps.get-manifest-info.outputs.namespace }}
+      service-name: ${{ steps.get-manifest-info.outputs.service-name }}
     steps:
       - name: Publish progress message to slack
         uses: monta-app/slack-notifier-cli-action@main
@@ -125,6 +127,26 @@ jobs:
       - id: arm64
         if: ${{ inputs.arm-build }}
         run: echo "runner=self-hosted-arm64" >> $GITHUB_OUTPUT
+      - name: Check out manifest repository
+        if: ${{ inputs.upload-open-api }}
+        uses: actions/checkout@v3
+        with:
+          repository: monta-app/kube-manifests
+          token: ${{ secrets.MANIFEST_REPO_PAT }}
+      - name: Get manifest info
+        id: get-manifest-info
+        if: ${{ inputs.upload-open-api }}
+        shell: bash
+        env:
+          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
+          STAGE: ${{ inputs.stage }}
+        run: |
+          # Read namespace from config.yaml
+          K8S_NAMESPACE=$(cat apps/$SERVICE_IDENTIFIER/$STAGE/cluster/config.yaml | yq '.namespace')
+          echo "namespace=$K8S_NAMESPACE" >> "$GITHUB_OUTPUT"
+          # Read service name from values.yaml
+          SERVICE_NAME=$(cat apps/$SERVICE_IDENTIFIER/$STAGE/app/values.yaml | yq '.[] | select(key == "laravel" or key == "kotlin").fullnameOverride')
+          echo "service-name=$SERVICE_NAME" >> "$GITHUB_OUTPUT"
 
   test:
     name: Test
@@ -179,133 +201,6 @@ jobs:
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: ${{ inputs.slack-channel-id }}
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
-
-  get-manifest-info:
-    if: ${{ inputs.upload-open-api }}
-    name: Get manifest information
-    needs: [ test ]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    outputs:
-      service-namespace: ${{ steps.get-manifest-info.outputs.namespace }}
-      service-name: ${{ steps.get-manifest-info.outputs.service-name }}
-    steps:
-      - name: Check out manifest repository
-        uses: actions/checkout@v3
-        with:
-          repository: monta-app/kube-manifests
-          token: ${{ secrets.MANIFEST_REPO_PAT }}
-      - name: Get manifest info
-        id: get-manifest-info
-        shell: bash
-        env:
-          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
-          STAGE: ${{ inputs.stage }}
-        run: |
-          # Read namespace from config.yaml
-          K8S_NAMESPACE=$(cat apps/$SERVICE_IDENTIFIER/$STAGE/cluster/config.yaml | yq '.namespace')
-          echo "namespace=$K8S_NAMESPACE" >> "$GITHUB_OUTPUT"
-          # Read service name from values.yaml
-          SERVICE_NAME=$(cat apps/$SERVICE_IDENTIFIER/$STAGE/app/values.yaml | yq '.[] | select(key == "laravel" or key == "kotlin").fullnameOverride')
-          echo "service-name=$SERVICE_NAME" >> "$GITHUB_OUTPUT"
-  update-open-api-spec:
-    if: ${{ inputs.upload-open-api }}
-    name: Update OpenAPI Spec
-    needs: [ get-manifest-info ]
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: ${{ inputs.java-distribution }}
-          java-version: ${{ inputs.java-version }}
-          cache: 'gradle'
-      - name: Install LinkerD CLI
-        shell: bash
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSfL https://run.linkerd.io/install | sh
-      - name: Update Path with LinkerD CLI
-        shell: bash
-        run: |
-          echo "/home/runner/.linkerd2/bin" >> $GITHUB_PATH
-      - name: Build Open API Spec
-        shell: bash
-        env:
-          GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
-          GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
-          GRADLE_MODULE: ${{ inputs.gradle-module }}
-        run: |
-          if [ -n "$GRADLE_MODULE" ]; then
-              ./gradlew $GRADLE_MODULE:kaptKotlin
-          else
-              ./gradlew kaptKotlin
-          fi
-      - name: Create service profile
-        id: create-service-profile
-        shell: bash
-        env:
-          GRADLE_MODULE: ${{ inputs.gradle-module }}
-          K8S_NAMESPACE: ${{ needs.get-manifest-info.outputs.service-namespace }}
-          SERVICE_NAME: ${{ needs.get-manifest-info.outputs.service-name }}
-        run: |
-          # Hardcoded target directory
-          TARGET_DIR="build/tmp/kapt3/classes/main/META-INF/swagger"
-
-          # Check if a gradle-module parameter is supplied and if so, prepend it to the target directory
-          if [ -n "$GRADLE_MODULE" ]; then
-              TARGET_DIR="${GRADLE_MODULE}/${TARGET_DIR}"
-          fi
-
-          # Ensure the target directory exists
-          if [ ! -d "${TARGET_DIR}" ]; then
-              echo "Error: Target directory '${TARGET_DIR}' does not exist."
-              exit 1
-          fi
-
-          cd $TARGET_DIR
-
-          # Find the first .yml file in the target directory
-          YML_FILE=$(find . -type f -name '*.yml' | head -n 1)
-
-          # Check if a .yml file was found and display the result or an error message
-          if [ -z "${YML_FILE}" ]; then
-              echo "No .yml file found in ${TARGET_DIR}."
-              exit 1
-          fi
-
-          linkerd profile --ignore-cluster -n $K8S_NAMESPACE --open-api $YML_FILE $SERVICE_NAME >> service-profile.yaml
-
-          SERVICE_PROFILE=$(realpath service-profile.yaml)
-          echo "Service Profile path $SERVICE_PROFILE"
-          echo "service-profile-path=$SERVICE_PROFILE" >> "$GITHUB_OUTPUT"
-
-      - name: Generate commit info
-        id: generate-commit-info
-        shell: bash
-        env:
-          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
-          STAGE: ${{ inputs.stage }}
-        run: |
-          DESTINATION_PATH="apps/${SERVICE_IDENTIFIER}/${STAGE}/app/templates"
-          echo "Destination path $DESTINATION_PATH"
-          echo "destination-path=$DESTINATION_PATH" >> "$GITHUB_OUTPUT"
-          COMMIT_MESSAGE="chore($SERVICE_IDENTIFIER): updated open API spec for $STAGE"
-          echo "Commit message $COMMIT_MESSAGE"
-          echo "commit-message=$COMMIT_MESSAGE" >> "$GITHUB_OUTPUT"
-      - name: Push service profile to repository
-        uses: dmnemec/copy_file_to_another_repo_action@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.MANIFEST_REPO_PAT }}
-        with:
-          source_file: ${{ steps.create-service-profile.outputs.service-profile-path }}
-          destination_repo: 'monta-app/kube-manifests'
-          destination_folder: ${{ steps.generate-commit-info.outputs.destination-path }}
-          user_email: "action@github.com"
-          user_name: "GitHub Action"
-          commit_message: ${{ steps.generate-commit-info.outputs.commit-message }}
 
   build:
     name: Build
@@ -437,6 +332,105 @@ jobs:
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: ${{ inputs.slack-channel-id }}
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
+
+  update-open-api-spec:
+    if: ${{ inputs.upload-open-api }}
+    name: Update OpenAPI Spec
+    needs: [ build, test ]
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: ${{ inputs.java-distribution }}
+          java-version: ${{ inputs.java-version }}
+          cache: 'gradle'
+      - name: Install LinkerD CLI
+        shell: bash
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSfL https://run.linkerd.io/install | sh
+      - name: Update Path with LinkerD CLI
+        shell: bash
+        run: |
+          echo "/home/runner/.linkerd2/bin" >> $GITHUB_PATH
+      - name: Build Open API Spec
+        shell: bash
+        env:
+          GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
+          GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
+          GRADLE_MODULE: ${{ inputs.gradle-module }}
+        run: |
+          if [ -n "$GRADLE_MODULE" ]; then
+              ./gradlew $GRADLE_MODULE:kaptKotlin
+          else
+              ./gradlew kaptKotlin
+          fi
+      - name: Create service profile
+        id: create-service-profile
+        shell: bash
+        env:
+          GRADLE_MODULE: ${{ inputs.gradle-module }}
+          K8S_NAMESPACE: ${{ needs.get-manifest-info.outputs.service-namespace }}
+          SERVICE_NAME: ${{ needs.get-manifest-info.outputs.service-name }}
+        run: |
+          # Hardcoded target directory
+          TARGET_DIR="build/tmp/kapt3/classes/main/META-INF/swagger"
+
+          # Check if a gradle-module parameter is supplied and if so, prepend it to the target directory
+          if [ -n "$GRADLE_MODULE" ]; then
+              TARGET_DIR="${GRADLE_MODULE}/${TARGET_DIR}"
+          fi
+
+          # Ensure the target directory exists
+          if [ ! -d "${TARGET_DIR}" ]; then
+              echo "Error: Target directory '${TARGET_DIR}' does not exist."
+              exit 1
+          fi
+
+          cd $TARGET_DIR
+
+          # Find the first .yml file in the target directory
+          YML_FILE=$(find . -type f -name '*.yml' | head -n 1)
+
+          # Check if a .yml file was found and display the result or an error message
+          if [ -z "${YML_FILE}" ]; then
+              echo "No .yml file found in ${TARGET_DIR}."
+              exit 1
+          fi
+
+          linkerd profile --ignore-cluster -n $K8S_NAMESPACE --open-api $YML_FILE $SERVICE_NAME >> service-profile.yaml
+
+          SERVICE_PROFILE=$(realpath service-profile.yaml)
+          echo "Service Profile path $SERVICE_PROFILE"
+          echo "service-profile-path=$SERVICE_PROFILE" >> "$GITHUB_OUTPUT"
+
+      - name: Generate commit info
+        id: generate-commit-info
+        shell: bash
+        env:
+          SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
+          STAGE: ${{ inputs.stage }}
+        run: |
+          DESTINATION_PATH="apps/${SERVICE_IDENTIFIER}/${STAGE}/app/templates"
+          echo "Destination path $DESTINATION_PATH"
+          echo "destination-path=$DESTINATION_PATH" >> "$GITHUB_OUTPUT"
+          COMMIT_MESSAGE="chore($SERVICE_IDENTIFIER): updated open API spec for $STAGE"
+          echo "Commit message $COMMIT_MESSAGE"
+          echo "commit-message=$COMMIT_MESSAGE" >> "$GITHUB_OUTPUT"
+      - name: Push service profile to repository
+        uses: dmnemec/copy_file_to_another_repo_action@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.MANIFEST_REPO_PAT }}
+        with:
+          source_file: ${{ steps.create-service-profile.outputs.service-profile-path }}
+          destination_repo: 'monta-app/kube-manifests'
+          destination_folder: ${{ steps.generate-commit-info.outputs.destination-path }}
+          user_email: "action@github.com"
+          user_name: "GitHub Action"
+          commit_message: ${{ steps.generate-commit-info.outputs.commit-message }}
 
   push-manifest-list:
     name: Push Manifest
