--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -340,7 +340,7 @@ jobs:
   update-open-api-spec:
     if: ${{ inputs.upload-open-api }}
     name: Update OpenAPI Spec
-    needs: [ init ]
+    needs: [ init, test, build ]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
