--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -153,7 +153,7 @@ jobs:
         env:
           SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
           STAGE: ${{ inputs.stage }}
-          ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}z
+          ARGOCD_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
           ARGOCD_SERVER: ${{ steps.set-argocd-server.outputs.argocd-hostname }}
         run: |
           if [ "${{ secrets.ARGOCD_TOKEN }}" == '' ]; then
